# RenderInfographie

./: CMakeLists.txt  description.txt  main.cpp
geometry/: Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  line.cpp  line.h  triangle.cpp  triangle.h  vector.cpp  vector.h
image/: objfile.cpp  objfile.h  objmodel.cpp  objmodel.h  tgaimage.cpp  tgaimage.h
